[package]
name = "rpi-led-matrix-sys"
version = "0.1.0"
edition = "2021"
description = "system library for the rpi-rgb-led-matrix C++ library"
authors = [
    "Tyler Holmes <tyler@holmesengineering.com>",
    "Philipp Compensis <github@0xg.de>",
]
links = "rgbmatrixsys"
build = "build.rs"
license = "GPL-3.0"
repository = "https://github.com/compensis/rust-rpi-rgb-led-matrix"
readme = "README.md"
keywords = ["rpi", "raspberry-pi", "led-matrix"]
categories = ["embedded", "external-ffi-bindings"]
include = [
    "src/*",
    "CHANGELOG.md",
    "README.md",
    "LICENSE.md",
    "build.rs",
    "Cargo.toml",
    "cpp-library/lib/*",
    "cpp-library/Makefile",
    "cpp-library/fonts/*",
    "cpp-library/include/*",
]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.2"
copy_dir = "0.1"

[features]
default = []
c-stubs = []
stdcpp-static-link = []

[package.metadata.docs.rs]
features = ["c-stubs"]
